feature: reverse method

--- a/linkedList/index.html
+++ b/linkedList/index.html
@@ -9,4 +9,12 @@
   
 </body>
 <script src="./linkedList.js"></script>
+<script>
+  const linkedList = new LinkedList()
+  linkedList.append(1)
+  linkedList.append(2)
+  linkedList.append(3)
+  linkedList.append(4)
+  linkedList.reverse() 
+</script>
 </html>
